# WiseTok

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  INSTALL.md  ITERATION2_AUDIT.md  KNOWN_ISSUES.md  README.md  Spec.md  TODO.md  pyproject.toml
benchmark/c/: 01_linux_kernel_module.c  02_libc_string_impl.c  03_socket_server.c  04_redis_command.c  05_gtk_app.c  06_signal_processing.c  07_makefile_and_header.h  08_postgresql_extension.c
benchmark/cpp/: 01_template_metaprogramming.cpp  02_lockfree_queue.hpp  03_opencv_image_pipeline.cpp  04_qt_widget_app.cpp  05_cuda_kernel.cu  06_embedded_arduino.ino  07_protobuf_grpc_service.cpp  08_vulkan_renderer.cpp  09_unreal_actor.cpp  10_competitive_programming.cpp
benchmark/java/: 01_SpringBootController.java  02_AndroidActivity.java  03_GenericsAndStreams.java  04_ConcurrencyExamples.java  05_JavaFXApp.java  06_MavenPom.xml  07_HibernateEntity.java  08_JUnit5Tests.java
benchmark/javascript/: 01_react_component.tsx  02_express_api.js  03_node_stream_processor.js  04_d3_visualization.js  05_websocket_realtime.ts  06_jest_test_suite.test.ts  07_vue3_composition.vue  08_webpack_config.js  09_threejs_scene.js  10_minified_lib_style.js
benchmark/prose/: 01_news_article.txt  (+9 more)
runs/: bench.py  extract_test_files.py
scripts/: build_corpus_120.py  launch_v2_training.sh  run_benchmark.py  validate_v1.py  validate_v2.py  validate_v3.py
src/: cli_core.rs  lib.rs  python.rs  ram.rs  special_tokens.rs  tests.rs
tests/: test_aggregate_file.rs  test_cli.rs  test_huggingface_export.rs  test_pretokenizer.rs  test_special_tokens.rs
(+78 files in other folders)
