[package]
name = "wisetok"
version = "0.1.0"
edition = "2021"
description = "Production BPE tokenizer trainer with Python bindings (fork of karpathy/rustbpe)"
license = "MIT"
readme = "README.md"

[lib]
# "cdylib" is required for Python bindings (shared library)
# "rlib" allows it to also be used as a normal Rust crate
crate-type = ["cdylib", "rlib"]

[dependencies]
# pyo3 provides the Python bindings
# "extension-module" is enabled via feature flag (see below)
pyo3 = { version = "0.27" }
dary_heap = "0.3"
fancy-regex = "0.16.1"
log = "0.4.28"
pyo3-log = "0.13"
ahash = "0.8.12"
rayon = "1.11.0"
compact_str = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
bincode = { version = "2.0", features = ["derive"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[dev-dependencies]
# For Rust-side testing
criterion = "0.5"  # benchmarking (optional)

[features]
default = []
# extension-module is enabled by maturin during Python builds
# but NOT during cargo test, allowing tests to link properly
extension-module = ["pyo3/extension-module"]

# Profile for release builds - optimize for speed
[profile.release]
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
